--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAFGJAp0u0ISyKMgqFWEnsgFzVmX1eoHM"></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAFGJAp0u0ISyKMgqFWEnsgFzVmX1eoHM"></script> -->
 
   <!-- The vendor js is generated during the build process
        It contains all of the dependencies in node_modules -->
