--- a/src/pages/photobooth/photobooth.html
+++ b/src/pages/photobooth/photobooth.html
@@ -6,13 +6,22 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>photobooth</ion-title>
+  <ion-navbar color='primary'>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>
+      Photobooth
+    </ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content>
+  <div class="under-construction">
+    <ion-icon style="font-size: 100px; color: orangered" name="construct"></ion-icon>
+    <h2>The Page is under construction, go back again later! <ion-icon name="thumbs-up"></ion-icon>
+    </h2>
+  </div>
 </ion-content>
