--- a/src/pages/detail-animal/detail-animal.html
+++ b/src/pages/detail-animal/detail-animal.html
@@ -1,27 +1,22 @@
 <!--
-  Generated template for the VisitorInfoPage page.
+  Generated template for the DetailAnimalPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar color='primary'>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
     <ion-title>
-      Visitor Information
+      Ragunan Zoo
     </ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content>
+<ion-content padding>
   <div class="under-construction">
     <ion-icon style="font-size: 100px; color: orangered" name="construct"></ion-icon>
-    <h2>The Page is under construction, go back again later! <ion-icon name="thumbs-up"></ion-icon>
-    </h2>
+    <h2>The Page is under construction, go back again later! <ion-icon name="thumbs-up"></ion-icon></h2>
   </div>
 </ion-content>
