--- a/src/pages/activities/activities.html
+++ b/src/pages/activities/activities.html
@@ -1,60 +1,65 @@
-<ion-content>
-  <div class="get-direction-content">
-    <h4>Address</h4>
-    <p>Jln Harsono RM No. 1, Ragunan, Pasar Minggu</p>
-    <p>Jakarta Selatan, 12550</p>
-    <p>Indonesia</p>
-    <p>+622178847114</p>
+<ion-content style="background-color: #f2f2f2;">
+  <div class="toggle-reminder">
+    <h3>Show Reminder</h3>
+    <div class="current-reminder">
+      <span>0</span>
+    </div>
+  </div>
 
-    <div class="getdirection-maps"></div>
-    <ion-buttons>
-      <button ion-button color="button-color">Get Direction</button>
-    </ion-buttons>
-  </div>
-  <div class="toggle-car-bus">
-    <ion-buttons>
-      <button ion-button>
-        <img src="assets/imgs/icon_car_on.png" alt=""><span>By Car</span>
-      </button>
-      <button ion-button>
-        <img src="assets/imgs/icon_bus_off.png" alt=""><span>By Bus</span>
-      </button>
-    </ion-buttons>
-  </div>
-  <div #car class="car-routes">
-    <ion-list>
-      <ion-item>
-        <h2>From Cawang</h2>
-        <p>Cawang - MT Haryono - Pancoran - Gatot Subroto - Kapten Tendean - Mampang Prapatan Raya - Warung Jati Barat - Taman Margasatwa - Harsono RM - Kebon Binatang Ragunan</p>
-      </ion-item>
-      <ion-item>
-        <h2>From Cawang</h2>
-        <p>Cawang - MT Haryono - Pancoran - Gatot Subroto - Kapten Tendean - Mampang Prapatan Raya - Warung Jati Barat -
-          Taman Margasatwa - Harsono RM - Kebon Binatang Ragunan</p>
-      </ion-item>
-      <ion-item>
-        <h2>From Cawang</h2>
-        <p>Cawang - MT Haryono - Pancoran - Gatot Subroto - Kapten Tendean - Mampang Prapatan Raya - Warung Jati Barat -
-          Taman Margasatwa - Harsono RM - Kebon Binatang Ragunan</p>
-      </ion-item>
-    </ion-list>
-  </div>
-  <div #bus class="bus-routes">
-    <ion-list>
-      <ion-item>
-        <h2>From Bandara Soekarno - Hatta</h2>
-        <ol>
-          <li>Dari Bandara Soekarno Hatta naik Damri jurusan pasar Minggu turun di Termminal Pasar Minggu</li>
-          <li>Naik Mikrolet 17/17A turun di Kebun Binatang Ragunan Pintu Timur</li>
-        </ol>
-      </ion-item>
-      <ion-item>
-        <h2>From Bandara Soekarno - Hatta</h2>
-        <ol>
-          <li>Dari Bandara Soekarno Hatta naik Damri jurusan pasar Minggu turun di Termminal Pasar Minggu</li>
-          <li>Naik Mikrolet 17/17A turun di Kebun Binatang Ragunan Pintu Timur</li>
-        </ol>
-      </ion-item>
-    </ion-list>
+  <div class="content-toggle">
+    <div class="feeding-time-bar">
+      <span>09:00</span>
+    </div>
+    
+    <ion-card>
+      <ion-card-header>
+        <img src="assets/imgs/icon/icon_11004.png" alt="">
+        <p>Feeding the Gorilla</p>
+      </ion-card-header>
+      <div class="card-divider"></div>
+      <ion-card-content>
+        <h1 class="view-map">View Map</h1>
+        <h1 class="remind">Remind Me</h1>
+      </ion-card-content>
+    </ion-card>
+    <ion-card>
+      <ion-card-header>
+        <img src="assets/imgs/icon/icon_11004.png" alt="">
+        <p>Feeding the Gorilla</p>
+      </ion-card-header>
+      <div class="card-divider"></div>
+      <ion-card-content>
+        <h1 class="view-map">View Map</h1>
+        <h1 class="remind">Remind Me</h1>
+      </ion-card-content>
+    </ion-card>
+    <div class="feeding-time-bar">
+      <span>09:00</span>
+    </div>
+    <ion-card>
+      <ion-card-header>
+        <img src="assets/imgs/icon/icon_11004.png" alt="">
+        <p>Feeding the Gorilla</p>
+      </ion-card-header>
+      <div class="card-divider"></div>
+      <ion-card-content>
+        <h1 class="view-map">View Map</h1>
+        <h1 class="remind">Remind Me</h1>
+      </ion-card-content>
+    </ion-card>
+    <div class="feeding-time-bar">
+      <span>09:00</span>
+    </div>
+    <ion-card>
+      <ion-card-header>
+        <img src="assets/imgs/icon/icon_11004.png" alt="">
+        <p>Feeding the Gorilla</p>
+      </ion-card-header>
+      <div class="card-divider"></div>
+      <ion-card-content>
+        <h1 class="view-map">View Map</h1>
+        <h1 class="remind">Remind Me</h1>
+      </ion-card-content>
+    </ion-card>
   </div>
 </ion-content>
