--- a/src/pages/contactus/contactus.html
+++ b/src/pages/contactus/contactus.html
@@ -1,3 +1,35 @@
-<ion-content padding>
+<ion-content>
+    <h2>Send your love letter to our animals!</h2>
 
+    <div class="contact-bar">
+        <img src="assets/imgs/icon_fax.png" alt="">
+        <p>Jln Harsono RM No. 1, Ragunan, Pasar Minggu Jakarta Selatan, 12550 Indonesia</p>
+    </div>
+    <div class="contact-bar">
+        <img src="assets/imgs/icon_fax.png" alt="">
+        <p>Jln Harsono RM No. 1, Ragunan, Pasar Minggu Jakarta Selatan, 12550 Indonesia</p>
+    </div>
+    <div class="contact-bar">
+        <img src="assets/imgs/icon_fax.png" alt="">
+        <p>Jln Harsono RM No. 1, Ragunan, Pasar Minggu Jakarta Selatan, 12550 Indonesia</p>
+    </div>
+
+    <h2>Or Write to Use here!</h2>
+    <div class="form-contact">
+        <form action="#" method="post">
+            <ion-label>Enter Your Name</ion-label>
+            <ion-input></ion-input>
+            <ion-label>Email Address</ion-label>
+            <ion-input></ion-input>
+            <ion-label>Message Subject</ion-label>
+            <ion-input></ion-input>
+            <ion-label>Enter Your Message</ion-label>
+            <ion-textarea></ion-textarea>
+
+            <ion-checkbox></ion-checkbox><span>Send a copy of this message to your email</span>
+            <ion-buttons>
+                <button ion-button>Submit</button>
+            </ion-buttons>
+        </form>
+    </div>
 </ion-content>
