--- a/src/pages/photobooth/photobooth.html
+++ b/src/pages/photobooth/photobooth.html
@@ -18,10 +18,18 @@
 </ion-header>
 
 
-<ion-content>
-  <div class="under-construction">
-    <ion-icon style="font-size: 100px; color: orangered" name="construct"></ion-icon>
-    <h2>The Page is under construction, go back again later! <ion-icon name="thumbs-up"></ion-icon>
-    </h2>
-  </div>
+<ion-content padding>
+  <img src="assets/imgs/coverimage.png" alt="">
+  <ion-buttons>
+    <button ion-button>
+      <ion-icon name="camera"></ion-icon>
+      <h1>Camera</h1>
+    </button>
+  </ion-buttons>
+  <ion-buttons>
+    <button ion-button>
+      <ion-icon name="albums"></ion-icon>
+      <h1>Gallery</h1>
+    </button>
+  </ion-buttons>
 </ion-content>
