add a little bit of visitor info

--- a/src/pages/contactus/contactus.html
+++ b/src/pages/contactus/contactus.html
@@ -1,17 +1,17 @@
-<ion-content>
+<ion-content style="background-color: #f2f2f2;">
     <h2>Send your love letter to our animals!</h2>
 
     <div class="contact-bar">
-        <img src="assets/imgs/icon_fax.png" alt="">
+        <img src="assets/imgs/icon_mail.png" alt="">
         <p>Jln Harsono RM No. 1, Ragunan, Pasar Minggu Jakarta Selatan, 12550 Indonesia</p>
     </div>
     <div class="contact-bar">
-        <img src="assets/imgs/icon_fax.png" alt="">
-        <p>Jln Harsono RM No. 1, Ragunan, Pasar Minggu Jakarta Selatan, 12550 Indonesia</p>
+        <img src="assets/imgs/icon_phone.png" alt="">
+        <p>+62 21 7884 7114</p>
     </div>
     <div class="contact-bar">
         <img src="assets/imgs/icon_fax.png" alt="">
-        <p>Jln Harsono RM No. 1, Ragunan, Pasar Minggu Jakarta Selatan, 12550 Indonesia</p>
+        <p>000011112222</p>
     </div>
 
     <h2>Or Write to Use here!</h2>
