report to mas yogi part 2

--- a/src/pages/contactus/contactus.html
+++ b/src/pages/contactus/contactus.html
@@ -28,7 +28,7 @@
 
             <ion-checkbox></ion-checkbox><span>Send a copy of this message to your email</span>
             <ion-buttons>
-                <button ion-button>Submit</button>
+                <button color="button-color" ion-button>Submit</button>
             </ion-buttons>
         </form>
     </div>
