--- a/src/pages/gethere/gethere.html
+++ b/src/pages/gethere/gethere.html
@@ -6,7 +6,7 @@
     <p>Indonesia</p>
     <p>+622178847114</p>
 
-    <div #getdirection_maps id="getdirection-maps"></div>
+    <div #getdirection_maps id="getdirection_maps"></div>
     <ion-buttons>
       <button ion-button color="button-color">Get Direction</button>
     </ion-buttons>
